data/derived/comb/progs/unify/prog0342.ml.out
Characters 23-26:
  let _ = buildSine(Sine 0.5);;
                         ^^^
Error: This expression has type float but an expression was expected of type
         expr
